# benchmark-wasm-vs-js

./: .gitignore  README.md  Resultados Pruebas.xlsx  bundle.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
app/components/not-found/: not-found.html
app/components/ray-tracer/: ray-tracer.html
crates/collision-detection/: Cargo.toml
crates/collision-detection/src/: lib.rs
crates/fibonacci/: Cargo.toml
crates/fibonacci/src/: lib.rs
crates/math-operations/: Cargo.toml
crates/multiply-double/: Cargo.toml
crates/multiply-double-vector/: Cargo.toml
crates/multiply-double-vector/src/: lib.rs
crates/multiply-double/src/: lib.rs
crates/multiply-int-vector/: Cargo.toml
crates/multiply-int-vector/src/: lib.rs
crates/quicksortDouble/: Cargo.toml
crates/quicksortDouble/src/: lib.rs
crates/quicksortInt/: Cargo.toml
crates/quicksortInt/src/: lib.rs
crates/sum-consecutiva/: Cargo.toml
crates/sum-consecutiva/src/: lib.rs
js/: main.js
libs/collisionDetection/cpp/: collisionDetection.js
libs/collisionDetection/rust/: collision_detection.js  collision_detection_bg.wasm
libs/fibonacci/cpp/: fib.js
libs/fibonacci/rust/: fibRust.js
libs/imageConvolute/cpp/: imageConvolute.js
libs/imageConvolute/rust/: image_convolute.js  package.json
libs/multiplyDouble/cpp/: multiplyDouble.js
libs/multiplyDouble/rust/: multiply_double.d.ts  multiply_double.js  multiply_double_bg.wasm
libs/multiplyDoubleVector/cpp/: multiplyDoubleVec.js
libs/sumInt/cpp/: sumInt.js
src/: index.html  index.js  styles.css
src/app/: app.js
(+127 files in other folders)
